Thu Apr 08 15:33:16 BST 2004  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: valgrinding code needs errno.h too.

Thu Apr 08 15:28:44 BST 2004  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Make Xapian::Weight::Weight() protected
	  rather than private as we want to be able to call it from derived
	  classes (GCC 3.4 flags this, other compilers seem to miss it).

Tue Apr 06 03:32:39 BST 2004  Olly Betts <olly@survex.com>

	* net/omerr_string.cc,include/xapian/error.h,
	  include/xapian/errortypes.h,include/xapian/output.h:
	  Fixed some doxygen warnings.

Mon Apr 05 17:21:06 BST 2004  Olly Betts <olly@survex.com>

	* README: There never was an Omsee release - the last BrightStation
	  release was "OpenMuscat 0.4.1".

Mon Apr 05 17:19:38 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_database.h: Make the flush criterion 1000
	  documents changed (added, removed, or replaced) as that seems to
	  perform much better over a wide variety of document sizes.

Thu Apr 01 01:04:17 BST 2004  Olly Betts <olly@survex.com>

	* tests/quartztest.cc: Fixed temporary directory used (a slash was
	  missing).

Thu Apr 01 00:39:59 BST 2004  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Fri Mar 26 22:33:30 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Fix problems with termfreq and
	  collfreq in postlist getting out of step when a recently modified
	  or deleted document is deleted or remodified.

Fri Mar 26 12:31:24 GMT 2004  Olly Betts <olly@survex.com>

	* configure.in: Fixed check for --enable-runtime-pseudo-reloc.

Fri Mar 26 12:31:00 GMT 2004  Olly Betts <olly@survex.com>

	* bin/Makefile.am: Removed spurious "-lz" from quartzdump_LDADD.

Thu Mar 25 00:22:13 GMT 2004  Olly Betts <olly@survex.com>

	* bin/quartzcheck.cc: Check the structure with the postlist Btree
	  as well as the Btree structures themselves.
